# speakrs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: rust.yml
crates/speakrs-gui/: .qmlls.ini  Cargo.toml
crates/speakrs-gui/qml/components/: ListTile.qml
crates/speakrs-gui/qml/main/: main.qml
crates/speakrs-gui/src/: cxxqt_object.rs  lib.rs
qml/: main.qml
src/: client.rs  common.rs  gui.rs  main.rs  protocol.rs  server.rs
